--- a/HrSystem/HrSystem/Views/Vacancy/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Vacancy/Index.cshtml
@@ -3,7 +3,10 @@
 @using HRModels;
 
 <center><h2>Vacancy List</h2></center>
-<center><button type="button" class="btn btn-primary">+ New Vacancy</button></center>
+<center>
+    <a href="~/Vacancy/Add">
+    <button type="button" class="btn btn-primary">+ New Vacancy</button>
+        </a></center>
 <br>
 @{
     VacancyModel vacancyModel = ViewBag.vacancyModel as VacancyModel;
@@ -36,9 +39,9 @@
     <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead> 
             <tr>
-                <th><a onclick="sort('id','@ViewBag.orderBy')" href="/vacancy/index?columnName=id&orderBy=@ViewBag.orderBy">#</a></th>
+                <th><a onclick="sort('id','@ViewBag.orderBy')" href="/vacancy/index?columnName=id&orderBy=@ViewBag.orderBy">Id</a></th>
                 <th><a onclick="sort('position','@ViewBag.orderBy')" href="/vacancy/index?columnName=position&orderBy=asc">Vacancy Information</a></th>
-                <th>Availability</th>
+                <th>Upload Resume</th>
                 <th>Status</th>
                 <th>Action</th>
 
@@ -47,22 +50,24 @@
         <tbody>
             @for (int i = 0; i < Model.Count; i = i + 1)
             {
-                <tr>
-                    <td>@Model[i].Id</td>
-                    <td>
-                        Position : @Model[i].Position<br>
-                        Skills :@Model[i].Skills<br>
-                        Experience : @Model[i].Experience <br>
-                    </td>
-                    <td>@Model[i].Availability</td>
-                    <td><span class="badge badge-success">Active</span></td>
-                    <td>
-                        <button type="button" class="btn btn-success">View</button>
-                        <button type="button" class="btn btn-warning">Edit</button>
-                        <button type="button" class="btn btn-danger">Delete</button>
-                    </td>
+            <tr>
+                <td>@Model[i].Id</td>
+                <td>
+                    Position : @Model[i].Position<br>
+                    Skills :@Model[i].Skills<br>
+                    Experience : @Model[i].Experience <br>
 
-                </tr>
+                </td>
+
+                <td><button type="button" class="btn btn-success">Download</button></td>
+                <td><span class="badge badge-success">Active</span></td>
+                <td>
+                    <button type="button" class="btn btn-success">View</button>
+                    <a href="~/Vacancy/Edit/@Model[i].Id"> <button type="button" class="btn btn-warning">Edit</button></a>
+                    <a href="~/Vacancy/Delete/@Model[i].Id" onclick="isDelete()"> <button type="button" class="btn btn-warning">Delete</button></a>
+                </td>
+
+            </tr>
             }
 
 
@@ -73,7 +78,7 @@
             <tr>
                 <th>#</th>
                 <th>Vacancy Information</th>
-                <th>Availability</th>
+                <th>Upload Resume</th>
                 <th>Status</th>
                 <th>Action</th>
 
@@ -123,6 +128,15 @@
         return false;
     }
 
+    function isDelete()
+    {
+        if (confirm("Do you want to delete user.")) { }
+        else {
+            event.preventDefault();
+            return false;
+        }
+
+    }
     function sort(columnName, orderBy) {
         event.preventDefault();
         document.getElementById("columnName").value = columnName;
