--- a/HrSystem/HrSystem/Views/Applications/Add.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/Add.cshtml
@@ -33,7 +33,15 @@
             </div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
+                @if (User.IsInRoleCheck("Admin"))
+                {
+                    <input asp-for="Email" readonly class="form-control" />
+                }
+                else
+                {
+                    <input asp-for="Email" class="form-control" />
+                }
+
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
