--- a/HrSystem/HrSystem/Views/Shared/_Layout.cshtml
+++ b/HrSystem/HrSystem/Views/Shared/_Layout.cshtml
@@ -218,7 +218,7 @@
             <h3>VM3<span>Tech</span></h3>
         </div> 
         <div class="right_area">
-            <a href="#" class="logout_btn">Logout</a>
+            <a href="/Users/Logout" class="logout_btn">Logout</a>
         </div>
     </header>
     <!--header area end-->
