--- a/HrSystem/HrSystem/Views/_ViewImports.cshtml
+++ b/HrSystem/HrSystem/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using HrSystem.Models
 @using HREntity
 @using HRModels
+@using HrSystem.FIlters
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
