--- a/HrSystem/DummyMVC/Views/Shared/_Layout_new.cshtml
+++ b/HrSystem/DummyMVC/Views/Shared/_Layout_new.cshtml
@@ -25,7 +25,7 @@
 <body>
     <div class="nav">
         <ul>
-            <li><a class="active" href="#home">Home</a></li>
+            <li><a class="active" href="/home">Home</a></li>
             <li><a href="/home/features">Amazing Features</a></li>
             <li><a href="/home/design">Design</a></li>
             <li><a href="/home/price">Pricing</a></li>
